@@ -4,118 +4,8 @@
 
 const sql = require('../../')
 const assert = require('assert')
-const cs = require('../../lib/connectionstring')
 const udt = require('../../lib/udt')
 const BasePool = require('../../lib/base/connection-pool')
-
-describe('Connection String', () => {
-  it('Connection String #1', done => {
-    const cfg = cs.resolve('Server=192.168.0.1;Database=testdb;User Id=testuser;Password=testpwd')
-
-    assert.strictEqual(cfg.user, 'testuser')
-    assert.strictEqual(cfg.password, 'testpwd')
-    assert.strictEqual(cfg.database, 'testdb')
-    assert.strictEqual(cfg.server, '192.168.0.1')
-    assert.strictEqual(cfg.port, undefined)
-
-    return done()
-  })
-
-  it('Connection String #2', done => {
-    const cfg = cs.resolve('Server=tcp:192.168.0.1,1433;Database=testdb;User Id=testuser;Password=testpwd;TrustServerCertificate=true')
-
-    assert.strictEqual(cfg.user, 'testuser')
-    assert.strictEqual(cfg.password, 'testpwd')
-    assert.strictEqual(cfg.database, 'testdb')
-    assert.strictEqual(cfg.server, '192.168.0.1')
-    assert.strictEqual(cfg.port, 1433)
-    assert.strictEqual(cfg.options.trustServerCertificate, true)
-
-    return done()
-  })
-
-  it('Connection String #3', done => {
-    const cfg = cs.resolve("Server=192.168.0.1;Database=testdb;User Id={testuser};Password='t;estpwd'", 'msnodesqlv8')
-
-    assert.strictEqual(cfg.connectionString, "Server=192.168.0.1;Database=testdb;User Id={testuser};Password='t;estpwd';Driver={SQL Server Native Client 11.0}")
-
-    return done()
-  })
-
-  it('Connection String #4', done => {
-    const cfg = cs.resolve('mssql://username:password@localhost:1433/database?encrypt=true&stream=true&domain=mydomain&requestTimeout=30000')
-
-    assert.strictEqual(cfg.user, 'username')
-    assert.strictEqual(cfg.password, 'password')
-    assert.strictEqual(cfg.database, 'database')
-    assert.strictEqual(cfg.server, 'localhost')
-    assert.strictEqual(cfg.domain, 'mydomain')
-    assert.strictEqual(cfg.port, 1433)
-    assert.strictEqual(cfg.options.encrypt, true)
-    assert.strictEqual(cfg.requestTimeout, 30000)
-
-    return done()
-  })
-
-  it('Connection String #5', done => {
-    const cfg = cs.resolve('mssql://username:password@localhost/INSTANCE/database?encrypt=true&stream=true&domain=mydomain', 'msnodesqlv8')
-
-    assert.strictEqual(cfg.connectionString, 'server={localhost\\INSTANCE};uid={mydomain\\username};pwd={password};database={database};encrypt={true};driver={SQL Server Native Client 11.0}')
-
-    return done()
-  })
-
-  it('Connection String #6 (multiSubnetFailover)', done => {
-    const cfg = cs.resolve('Server=192.168.0.1;Database=testdb;User Id=testuser;Password=testpwd;MultiSubnetFailover=True')
-
-    assert.strictEqual(cfg.options.multiSubnetFailover, true)
-    assert.strictEqual(cfg.user, 'testuser')
-    assert.strictEqual(cfg.password, 'testpwd')
-    assert.strictEqual(cfg.database, 'testdb')
-    assert.strictEqual(cfg.server, '192.168.0.1')
-    assert.strictEqual(cfg.port, undefined)
-
-    return done()
-  })
-
-  it('Connection String #7 (connection timeout)', done => {
-    const cfg = cs.resolve('Server=192.168.0.1;Database=testdb;User Id=testuser;Password=testpwd;Connection Timeout=30')
-    assert.strictEqual(cfg.user, 'testuser')
-    assert.strictEqual(cfg.password, 'testpwd')
-    assert.strictEqual(cfg.database, 'testdb')
-    assert.strictEqual(cfg.server, '192.168.0.1')
-    assert.strictEqual(cfg.port, undefined)
-    assert.strictEqual(cfg.connectionTimeout, 30000)
-
-    return done()
-  })
-
-  it('Connection String #8 (url encoding)', done => {
-    const cfg = cs.resolve('mssql://username:password%23@localhost:1433/database?encrypt=true')
-    assert.strictEqual(cfg.user, 'username')
-    assert.strictEqual(cfg.password, 'password#')
-    assert.strictEqual(cfg.database, 'database')
-    assert.strictEqual(cfg.server, 'localhost')
-    assert.strictEqual(cfg.port, 1433)
-    assert.strictEqual(cfg.options.encrypt, true)
-
-    return done()
-  })
-
-  it('Pulls out read only ApplicationIntent', done => {
-    const cfg = cs.resolve('Server=192.168.0.1;Database=testdb;User Id=testuser;Password=testpwd;Connection Timeout=30;ApplicationIntent=ReadOnly')
-    assert.strictEqual(cfg.options.readOnlyIntent, true)
-
-    return done()
-  })
-
-  it('Pulls out read write ApplicationIntent', done => {
-    const cfg = cs.resolve('Server=192.168.0.1;Database=testdb;User Id=testuser;Password=testpwd;Connection Timeout=30;ApplicationIntent=ReadWrite')
-    assert.strictEqual(cfg.options.readOnlyIntent, false)
-
-    return done()
-  })
-})
 
 describe('Unit', () => {
   it('table', done => {
